Fix resizing alignments in overlay logo

--- a/style.css
+++ b/style.css
@@ -48,23 +48,26 @@ body {
 .overlay {
   position: absolute;
   top: 30%;
-  width: 100%;
+  width: 35vw;
+  height: 15vh;
+  padding: 20px 0;
   display: inline-flex;
   color: white;
   text-shadow: 1px 1px 2px black;
   justify-content: center;
-  height: 5rem;
   background-color: rgba(30, 30, 30, 0.1);
 }
 
 .overlay img {
-  height: 4.5rem;
-  margin-right: 20px;
+  width: max(3vw, 5vw);
+  margin-right: 10px;
   margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .overlay h2 {
-  font-size: 4.5rem;
+  margin: 10px 0;
+  font-size: clamp(1.5rem, 4.5rem, 5vw);
   font-family: "GFS Neohellenic", sans-serif;
 }
 
